--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\ArjunB\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter_windows_3.13.9-stable\\flutter
+sdk.dir=C:\\Users\\hp\\AppData\\Local\\Android\\Sdk
+flutter.sdk=C:\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
