--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
   flutter_svg: ^2.0.9
+  url_launcher: ^6.2.1
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
